Add npm and yarn to  php-ambientum

--- a/php-ambientum/Dockerfile
+++ b/php-ambientum/Dockerfile
@@ -36,6 +36,8 @@ RUN echo "---> Enabling PHP-Alpine" && \
     bash \
     vim \
     git \
+    npm \
+    yarn \
     unzip \
     sudo && \
     echo "---> Preparing and Installing PHP" && \
